--- a/Assignment3.ipynb
+++ b/Assignment3.ipynb
@@ -97,7 +97,7 @@
         "    print(\"Hello,\", name)\n",
         "\n",
         "# 'Alice' is an argument\n",
-        "greet(\"Pranjul\")  # Output: Hello, Alice\n"
+        "greet(\"Avenish\")  # Output: Hello, Alice\n"
       ],
       "metadata": {
         "colab": {
@@ -112,7 +112,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello, Pranjul\n"
+            "Hello, Avenish\n"
           ]
         }
       ]
@@ -151,7 +151,7 @@
         "def greet(name=\"Guest\"):\n",
         "    print(\"Hello,\", name)\n",
         "\n",
-        "greet(\"Pranjul\")   # Output: Hello, Pranjul\n",
+        "greet(\"Avenish\")   # Output: Hello, Avenish\n",
         "greet()          # Output: Hello, Guest\n",
         "\n",
         "\n",
